importing space invaders game

--- a/pages/games.html
+++ b/pages/games.html
@@ -38,7 +38,7 @@
                                     <h2 class="fw-bolder">Space Invaders</h2>
                                     <p>Welcome to Space Invaders, a classic arcade-style game built with JavaScript! Use precision and timing to shoot down the aliens, earning 10 points per alien. Once you clear a group of invaders, prepare for an even greater challenge—each wave will expand, pushing your skills to the limit! Do you have what it takes to protect the planet and rack up the highest score? Let the battle begin! 🚀👾</p>
                                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                        <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="#">Play</a>
+                                        <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="space-invaders.html">Play</a>
                                     </div>
                                 </div>
                                 <img src="../assets/images/space-invaders.png" alt="space-invaders" style="max-width:180px;" class="m-3">
