importing thomas gia

--- a/pages/games.html
+++ b/pages/games.html
@@ -53,7 +53,7 @@
                                     <h2 class="fw-bolder">Thomas International GIA Test</h2>
                                     <p>The Thomas International GIA (General Intelligence Assessment) is a quick cognitive test designed to measure how fast you learn and process information. In this short version, you'll have 5 minutes to answer a few sample questions covering areas like reasoning, number speed, word meaning, and spatial awareness. It's all about your ability to think on your feet—so just relax, focus, and do your best!</p>
                                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
-                                        <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="#">Start</a>
+                                        <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="thomas-gia.html">Start</a>
                                     </div>
                                 </div>
                                 <img src="../assets/images/thomas-gia.png" alt="thomas-gia" style="max-width:180px;" class="m-3">
