--- a/index.html
+++ b/index.html
@@ -21,25 +21,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="d-flex flex-column h-100">
+    <div id="header-include"></div>
     <main class="flex-shrink-0">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
-            <div class="container px-5">
-                <a class="navbar-brand" href="/"><span class="fw-bolder text-primary">Daisy's Project</span></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder" id="navItems">
-                        <li class="nav-item"><a class="nav-link" href="pages/signup.html">Sign Up</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pages/login.html">Login</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
         <!-- Header-->
         <header class="py-5" id="mainHeader">
             <div class="container px-5 pb-5">
@@ -54,7 +37,6 @@
                             <h1 class="display-3 fw-bolder mb-5">
                                 <span class="text-gradient d-inline">JavaScript Games & Python</span>
                             </h1>
-
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                 <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder" href="pages/project-info.html">Project Info</a>
                                 <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder" href="pages/project-path.html">Project Path</a>
@@ -65,28 +47,16 @@
                 </div>
             </div>
         </header>
-
         <!-- Main Content -->
         <div id="mainContent"></div>
     </main>
-
-    <!-- Footer-->
-    <footer class="bg-white py-4 mt-auto">
-        <div class="container px-5">
-            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                <div class="col-auto">
-                    <div class="small m-0">Copyright &copy; Daisy's Website <span id="current-year"></span></div>
-                </div>
-            </div>
-        </div>
-    </footer>
-
+    <div id="footer-include"></div>
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    
     <!-- Firebase SDK -->
     <script type="module" src="js/firebase-config.js"></script>
     <script type="module" src="js/auth.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/include-partials.js"></script>
 </body>
 </html> 
