--- a/pages/space-invaders.html
+++ b/pages/space-invaders.html
@@ -9,29 +9,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container py-5">
-        <h1 class="text-center mb-4">Space Invaders</h1>
-        <div class="row justify-content-center mb-3">
-            <div class="col-auto">
-                <span class="fw-bold">Score: </span><span id="score">0</span>
-            </div>
-            <div class="col-auto">
-                <span id="game-over" class="text-danger fw-bold"></span>
-            </div>
+<div id="header-include"></div>
+<div class="container py-5">
+    <h1 class="text-center mb-4">Space Invaders</h1>
+    <div class="row justify-content-center mb-3">
+        <div class="col-auto">
+            <span class="fw-bold">Score: </span><span id="score">0</span>
         </div>
-        <div class="row justify-content-center mb-4">
-            <div class="col-auto">
-                <button id="start-btn" class="btn btn-success me-2">Start</button>
-                <button id="restart-btn" class="btn btn-warning">Restart</button>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col-auto">
-                <canvas id="board"></canvas>
-            </div>
+        <div class="col-auto">
+            <span id="game-over" class="text-danger fw-bold"></span>
         </div>
     </div>
-    <script type="module" src="../js/space.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <div class="row justify-content-center mb-4">
+        <div class="col-auto">
+            <button id="start-btn" class="btn btn-success me-2">Start</button>
+            <button id="restart-btn" class="btn btn-warning">Restart</button>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-auto">
+            <canvas id="board"></canvas>
+        </div>
+    </div>
+</div>
+<div id="footer-include"></div>
+<script type="module" src="../js/space.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../js/include-partials.js"></script>
 </body>
 </html> 
