--- a/pages/stats.html
+++ b/pages/stats.html
@@ -8,26 +8,29 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container px-5 my-5">
-        <div class="row gx-5 justify-content-center">
-            <div class="col-lg-11 col-xl-9 col-xxl-8">
-                <section>
-                    <div class="card shadow border-0 rounded-4 mb-5">
-                        <div class="card-body p-5">
-                            <h2 class="display-5 fw-bolder mb-4 text-gradient">Stats</h2>
-                            <p>Statistics and charts for your games and activities will appear here.</p>
-                            <div>
-                                <!-- Placeholder for future charts -->
-                                <canvas id="statsChart" width="400" height="200"></canvas>
-                            </div>
+<div id="header-include"></div>
+<div class="container px-5 my-5">
+    <div class="row gx-5 justify-content-center">
+        <div class="col-lg-11 col-xl-9 col-xxl-8">
+            <section>
+                <div class="card shadow border-0 rounded-4 mb-5">
+                    <div class="card-body p-5">
+                        <h2 class="display-5 fw-bolder mb-4 text-gradient">Stats</h2>
+                        <p>Statistics and charts for your games and activities will appear here.</p>
+                        <div>
+                            <!-- Placeholder for future charts -->
+                            <canvas id="statsChart" width="400" height="200"></canvas>
                         </div>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script type="module" src="../js/stats.js"></script>
+</div>
+<div id="footer-include"></div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script type="module" src="../js/stats.js"></script>
+<script src="../js/include-partials.js"></script>
 </body>
 </html> 
