--- a/pages/thomas-gia.html
+++ b/pages/thomas-gia.html
@@ -80,6 +80,7 @@
     </style>
 </head>
 <body>
+<div id="header-include"></div>
 <div class="container my-5">
     <h2>Verbal Reasoning (5 minutes)</h2>
     <div class="timer" id="timer">05:00</div>
@@ -99,7 +100,9 @@
         <button id="resetBtn">Try Again</button>
     </div>
 </div>
+<div id="footer-include"></div>
 <script type="module" src="../js/thomas-gia.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../js/include-partials.js"></script>
 </body>
 </html> 
