--- a/pages/signup.html
+++ b/pages/signup.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div id="header-include"></div>
     <div class="container px-5 my-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-11 col-xl-9 col-xxl-8">
@@ -76,33 +77,27 @@
             </div>
         </div>
     </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    
-    <!-- Firebase SDK -->
-    <script type="module">
-        import { signup } from '../js/auth.js';
-        
-        document.getElementById('signupForm').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const email = document.getElementById('email').value;
-            const firstName = document.getElementById('firstName').value;
-            const password1 = document.getElementById('password1').value;
-            const password2 = document.getElementById('password2').value;
-
-            if (password1 !== password2) {
-                alert("Passwords don't match!");
-                return;
-            }
-
-            if (password1.length < 6) {
-                alert("Password must be at least 6 characters!");
-                return;
-            }
-
-            await signup(email, password1, firstName);
-        });
-    </script>
+<div id="footer-include"></div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module">
+    import { signup } from '../js/auth.js';
+    document.getElementById('signupForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const email = document.getElementById('email').value;
+        const firstName = document.getElementById('firstName').value;
+        const password1 = document.getElementById('password1').value;
+        const password2 = document.getElementById('password2').value;
+        if (password1 !== password2) {
+            alert("Passwords don't match!");
+            return;
+        }
+        if (password1.length < 6) {
+            alert("Password must be at least 6 characters!");
+            return;
+        }
+        await signup(email, password1, firstName);
+    });
+</script>
+<script src="../js/include-partials.js"></script>
 </body>
 </html> 
