--- a/pages/stats.html
+++ b/pages/stats.html
@@ -15,8 +15,8 @@
             <section>
                 <div class="card shadow border-0 rounded-4 mb-5">
                     <div class="card-body p-5">
-                        <h2 class="display-5 fw-bolder mb-4 text-gradient">Stats</h2>
-                        <p>Statistics and charts for your games and activities will appear here.</p>
+                        <h2 class="display-5 fw-bolder mb-4 text-gradient">Games Stats</h2>
+                        <p>Statisxxxtics and charts for your games and activities will appear here.</p>
                         <div>
                             <!-- Placeholder for future charts -->
                             <canvas id="statsChart" width="400" height="200"></canvas>
